--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
     <modules>
         <module>parent</module>
         <module>entities</module>
+        <module>core</module>
     </modules>
 
     <groupId>net.kemitix.naolo</groupId>
