--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>parent</module>
         <module>entities</module>
         <module>core</module>
+        <module>presenter-rest-spring</module>
     </modules>
 
     <groupId>net.kemitix.naolo</groupId>
