--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,7 @@
     <version>DEV-SNAPSHOT</version>
     <name>root</name>
 
+    <properties>
+        <maven.install.skip>true</maven.install.skip>
+    </properties>
 </project>
