--- a/gateway-data-spring/pom.xml
+++ b/gateway-data-spring/pom.xml
@@ -15,6 +15,10 @@
     <artifactId>gateway-data-spring</artifactId>
     <description>Gateway Plugin for Data using Spring</description>
 
+    <properties>
+        <pitest.skip>true</pitest.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
