--- a/presenter-rest-spring/pom.xml
+++ b/presenter-rest-spring/pom.xml
@@ -15,6 +15,10 @@
     <artifactId>presenter-rest-spring</artifactId>
     <description>Presenter Plugin as REST using Spring</description>
 
+    <properties>
+        <pitest.skip>true</pitest.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
