--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>gateway-data-spring</module>
         <module>gateway-data-deltaspike</module>
         <module>presenter-rest-jaxrs</module>
+        <module>run-spring-boot</module>
     </modules>
 
     <groupId>net.kemitix.naolo</groupId>
