Add stub run-meecrowave module

--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>gateway-data-deltaspike</module>
         <module>presenter-rest-jaxrs</module>
         <module>run-spring-boot</module>
+        <module>run-meecrowave</module>
     </modules>
 
     <groupId>net.kemitix.naolo</groupId>
