--- a/run-spring-boot/pom.xml
+++ b/run-spring-boot/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <pitest.skip>true</pitest.skip>
+        <spring-boot.version>2.0.3.RELEASE</spring-boot.version>
     </properties>
 
     <dependencies>
@@ -28,6 +29,34 @@
             <groupId>net.kemitix.naolo</groupId>
             <artifactId>gateway-data-spring</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-hateoas</artifactId>
+        </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <!-- Import dependency management from Spring Boot -->
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
