--- a/run-meecrowave/pom.xml
+++ b/run-meecrowave/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <pitest.skip>true</pitest.skip>
+        <meecrowave.version>1.2.3</meecrowave.version>
     </properties>
 
     <dependencies>
@@ -28,6 +29,22 @@
             <groupId>net.kemitix.naolo</groupId>
             <artifactId>gateway-data-deltaspike</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.meecrowave</groupId>
+            <artifactId>meecrowave-core</artifactId>
+            <version>${meecrowave.version}</version>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.meecrowave</groupId>
+                <artifactId>meecrowave-maven-plugin</artifactId>
+                <version>${meecrowave.version}</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
