--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -21,6 +21,11 @@
         <tiles-maven-plugin.version>2.11</tiles-maven-plugin.version>
         <kemitix-tiles.version>0.9.0</kemitix-tiles.version>
         <kemitix-checkstyle.version>4.1.1</kemitix-checkstyle.version>
+
+        <junit.version>5.2.0</junit.version>
+        <assertj.version>3.10.0</assertj.version>
+        <mockito.version>2.20.1</mockito.version>
+        <jqwik.version>0.8.14</jqwik.version>
     </properties>
 
     <dependencyManagement>
@@ -55,6 +60,32 @@
                 <artifactId>gateway-data-deltaspike</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <!-- testing -->
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>${assertj.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-junit-jupiter</artifactId>
+                <version>${mockito.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>net.jqwik</groupId>
+                <artifactId>jqwik</artifactId>
+                <version>${jqwik.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
