run-spring-boot: add usecases test

--- a/run-spring-boot/pom.xml
+++ b/run-spring-boot/pom.xml
@@ -42,6 +42,12 @@
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>net.kemitix.naolo</groupId>
+            <artifactId>test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
