--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -28,6 +28,7 @@
         <assertj.version>3.10.0</assertj.version>
         <mockito.version>2.20.1</mockito.version>
         <jqwik.version>0.8.14</jqwik.version>
+        <lombok.version>1.18.0</lombok.version>
     </properties>
 
     <dependencyManagement>
@@ -66,6 +67,12 @@
                 <groupId>net.kemitix.naolo</groupId>
                 <artifactId>test</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
             </dependency>
 
             <!-- testing -->
