gateway-data-spring: add lombok dependency

--- a/gateway-data-spring/pom.xml
+++ b/gateway-data-spring/pom.xml
@@ -32,6 +32,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>net.kemitix.naolo</groupId>
             <artifactId>test</artifactId>
             <scope>test</scope>
