--- a/core/pom.xml
+++ b/core/pom.xml
@@ -28,6 +28,7 @@
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
             <artifactId>test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
