--- a/run-meecrowave/pom.xml
+++ b/run-meecrowave/pom.xml
@@ -17,24 +17,67 @@
 
     <properties>
         <pitest.skip>true</pitest.skip>
-        <meecrowave.version>1.2.3</meecrowave.version>
     </properties>
 
     <dependencies>
+
+        <!-- naolo -->
+        <dependency>
+            <groupId>net.kemitix.naolo</groupId>
+            <artifactId>core</artifactId>
+        </dependency>
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
             <artifactId>presenter-rest-jaxrs</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
             <artifactId>gateway-data-deltaspike</artifactId>
+            <scope>runtime</scope>
         </dependency>
 
+        <!-- lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Meecrowave -->
+        <dependency>
+            <groupId>org.apache.meecrowave</groupId>
+            <artifactId>meecrowave-specs-api</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.apache.meecrowave</groupId>
             <artifactId>meecrowave-core</artifactId>
-            <version>${meecrowave.version}</version>
         </dependency>
+
+        <!-- DeltaSpike -->
+        <dependency>
+            <groupId>org.apache.deltaspike.core</groupId>
+            <artifactId>deltaspike-core-impl</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-data-module-impl</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.deltaspike.modules</groupId>
+            <artifactId>deltaspike-jpa-module-impl</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- H2 Database -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
