--- a/gateway-data-spring/src/main/resources/application.properties
+++ b/gateway-data-spring/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.datasource.initialization-mode=always
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
