Add jaxb-api for java 9 compatibility

--- a/gateway-data-deltaspike/pom.xml
+++ b/gateway-data-deltaspike/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>core</artifactId>
         </dependency>
 
+        <!-- Java 9+ compatibility -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+
         <!-- meecrowave -->
         <dependency>
             <groupId>org.apache.meecrowave</groupId>
