--- a/run-meecrowave/pom.xml
+++ b/run-meecrowave/pom.xml
@@ -37,6 +37,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Java 9+ compatibility -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+
         <!-- lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
