--- a/run-spring-boot/pom.xml
+++ b/run-spring-boot/pom.xml
@@ -21,38 +21,55 @@
     </properties>
 
     <dependencies>
+
+        <!-- naolo -->
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
             <artifactId>presenter-rest-spring</artifactId>
         </dependency>
+
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
             <artifactId>gateway-data-spring</artifactId>
         </dependency>
 
+        <!-- Java 9+ compatibility -->
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
+
+        <!-- Spring REST -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-hateoas</artifactId>
         </dependency>
+
+        <!-- Spring Data -->
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
         </dependency>
+
+        <!-- H2 Database -->
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
 
+        <!-- Testing -->
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
             <artifactId>test</artifactId>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <dependencyManagement>
