run-meecrowave{ => -deltaspike}: rename module and script
Ahead of adding a run-meecrowave-jpa module and bin/meecrowave-jpa-run.sh script.

--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <module>gateway-data-jpa</module>
         <module>presenter-rest-jaxrs</module>
         <module>run-spring-boot</module>
-        <module>run-meecrowave</module>
+        <module>run-meecrowave-deltaspike</module>
         <module>test</module>
     </modules>
 
