run-meecrowave-jpa: add module and launch script

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -77,6 +77,11 @@
             </dependency>
             <dependency>
                 <groupId>net.kemitix.naolo</groupId>
+                <artifactId>gateway-data-jpa</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.kemitix.naolo</groupId>
                 <artifactId>test</artifactId>
                 <version>${project.version}</version>
             </dependency>
