gateway-data-common: extract module
* test should only be in test scopy
* remove commented out deltaspike dependencies in jpa module

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <pitest.skip>true</pitest.skip>
+        <digraph-dependency.basePackage>net.kemitix.naolo</digraph-dependency.basePackage>
     </properties>
 
     <dependencies>
