--- a/run-spring-boot/pom.xml
+++ b/run-spring-boot/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <pitest.skip>true</pitest.skip>
+        <digraph-dependency.basePackage>net.kemitix.naolo</digraph-dependency.basePackage>
         <spring-boot.version>2.0.4.RELEASE</spring-boot.version>
     </properties>
 
