[*-spring] Prevent spring from overriding our selected JUnit version

--- a/presenter-rest-spring/pom.xml
+++ b/presenter-rest-spring/pom.xml
@@ -45,6 +45,15 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- JUnit -->
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <!-- Spring/Spring Boot -->
             <dependency>
                 <!-- Import dependency management from Spring Boot -->
                 <groupId>org.springframework.boot</groupId>
