--- a/gateway-data-spring/pom.xml
+++ b/gateway-data-spring/pom.xml
@@ -47,6 +47,14 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- JUnit -->
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <!-- Import dependency management from Spring Boot -->
                 <groupId>org.springframework.boot</groupId>
