Move spotbugs-annotations to parent pom

--- a/gateway-data-jpa/pom.xml
+++ b/gateway-data-jpa/pom.xml
@@ -18,7 +18,6 @@
     <properties>
         <pitest.skip>true</pitest.skip>
         <digraph-dependency.basePackage>net.kemitix.naolo</digraph-dependency.basePackage>
-        <spotbugs-annotations.version>3.1.12</spotbugs-annotations.version>
     </properties>
 
     <dependencies>
@@ -63,10 +62,10 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Spotbugs Annotations -->
         <dependency>
             <groupId>com.github.spotbugs</groupId>
             <artifactId>spotbugs-annotations</artifactId>
-            <version>${spotbugs-annotations.version}</version>
             <scope>provided</scope>
         </dependency>
 
