--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -32,6 +32,7 @@
         <h2.version>1.4.199</h2.version>
         <meecrowave.version>1.2.7</meecrowave.version>
 
+        <spotbugs-annotations.version>3.1.12</spotbugs-annotations.version>
         <junit.version>5.4.1</junit.version>
         <assertj.version>3.12.2</assertj.version>
         <mockito.version>2.23.4</mockito.version>
@@ -166,6 +167,13 @@
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>${h2.version}</version>
+            </dependency>
+
+            <!-- Spotbugs Annotations -->
+            <dependency>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-annotations</artifactId>
+                <version>${spotbugs-annotations.version}</version>
             </dependency>
 
             <!-- testing -->
