--- a/gateway-data-jpa/pom.xml
+++ b/gateway-data-jpa/pom.xml
@@ -62,6 +62,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Spotbugs Annotations -->
+        <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-annotations</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- logging -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
