[entities] Add scala-library

--- a/entities/pom.xml
+++ b/entities/pom.xml
@@ -22,6 +22,11 @@
 
     <dependencies>
         <!-- NONE! -->
+        <!-- Scala -->
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+        </dependency>
 
         <!-- Testing -->
         <dependency>
