--- a/entities/pom.xml
+++ b/entities/pom.xml
@@ -30,10 +30,21 @@
 
         <!-- Testing -->
         <dependency>
-            <groupId>net.kemitix.naolo</groupId>
-            <artifactId>test</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.jqwik</groupId>
+            <artifactId>jqwik</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 </project>
