--- a/presenter-rest-jaxrs/pom.xml
+++ b/presenter-rest-jaxrs/pom.xml
@@ -38,13 +38,27 @@
             <artifactId>meecrowave-core</artifactId>
         </dependency>
 
-        <!-- testing -->
+        <!-- Testing -->
         <dependency>
-            <groupId>net.kemitix.naolo</groupId>
-            <artifactId>test</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.jqwik</groupId>
+            <artifactId>jqwik</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
