--- a/entities/pom.xml
+++ b/entities/pom.xml
@@ -5,14 +5,14 @@
 
     <parent>
         <groupId>net.kemitix.naolo</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>naolo-parent</artifactId>
         <version>DEV-SNAPSHOT</version>
         <relativePath>../parent</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>entities</artifactId>
+    <artifactId>naolo-entities</artifactId>
     <description>Core Business Objects</description>
 
     <properties>
