--- a/gateway-data-common/pom.xml
+++ b/gateway-data-common/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>net.kemitix.naolo</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>naolo-parent</artifactId>
         <version>DEV-SNAPSHOT</version>
         <relativePath>../parent</relativePath>
     </parent>
