--- a/gateway-data-jpa/pom.xml
+++ b/gateway-data-jpa/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>net.kemitix.naolo</groupId>
-        <artifactId>parent</artifactId>
+        <artifactId>naolo-parent</artifactId>
         <version>DEV-SNAPSHOT</version>
         <relativePath>../parent</relativePath>
     </parent>
@@ -25,7 +25,7 @@
         <!-- naolo -->
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
-            <artifactId>core</artifactId>
+            <artifactId>naolo-core</artifactId>
         </dependency>
         <dependency>
             <groupId>net.kemitix.naolo</groupId>
