Add Jakarta EE as provided dependency to core
Not entities. Entities doesn’t even know about Jakarta.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,6 +22,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>net.kemitix.naolo</groupId>
             <artifactId>naolo-entities</artifactId>
         </dependency>
